# Vault-bridge-relay

./: .gitignore  CLAUDE.md  README.md
client/: README.md  pyproject.toml
client/src/vault_bridge_client/: __init__.py  __main__.py  cli.py  client.py  config.py  vault_ops.py
client/tests/: test_client.py  test_e2e.py  test_vault_ops.py
docs/: r2-architecture.md  relay-architecture.md  setup-mac.md  setup-windows.md
relay/: package-lock.json  package.json  wrangler.toml
relay/src/: auth.ts  config.ts  index-manager.ts  index.ts  mcp.ts  models.ts  r2-ops.ts  secrets.ts  vault-session.ts
tokens-cli/: tokens.ts
