[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-bridge-client"
version = "0.1.0"
description = "Connect your Obsidian vault to the Vault Bridge relay for Claude.ai access"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Leigh", email = "leigh@the-empyrean.com" }]
dependencies = [
    "websockets>=13.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.scripts]
vault-bridge = "vault_bridge_client.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_bridge_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
